--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,9 +3,9 @@
 <head>
     <title>Simple Flask Site</title>
     <link rel="stylesheet" href="/static/css/reset.css">
-    <link rel="stylesheet" href="/static/css/style.css/">
-    <link rel="stylesheet" href="/static/css/form.css/">
-    <link rel="stylesheet" href="/static/css/colors.css/">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/form.css">
+    <link rel="stylesheet" href="/static/css/colors.css">
 </head>
 <body>
 <div class="wrapper">
@@ -25,7 +25,7 @@
     </div>
     <footer>
         <p class="right">
-            &lambda; Lambda School Labs
+            BloomTech Labs
         </p>
     </footer>
 </div>
