--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
-    {{ data | safe }}
+    <h1>About</h1>
+    {{ table | safe }}
 {% endblock %}
