--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Home Page</h1>
-    <p>Random Value: {{ rand_val | safe }}</p>
+    <h1>Home</h1>
+    <h2>Random Value: {{ random_value | safe }}</h2>
     <p>The random value above was generated with Python!</p>
 {% endblock %}
